# Gasoline

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
core/device/: device.hpp  device_registry.cpp  device_registry.hpp
core/discovery/: discovery_client.cpp  discovery_client.hpp
core/events/: event_bus.cpp  event_bus.hpp
core/networking/: client_handler.cpp  client_handler.hpp  connect.cpp  connect.hpp  send_packet.cpp  send_packet.hpp  server.cpp  server.hpp
core/protocol/: packet.cpp  packet.hpp
core/protocol/handlers/: hello_handler.cpp  hello_handler.hpp  message_handler.cpp  message_handler.hpp  ping_handler.cpp  ping_handler.hpp
core/protocol/router/: packet_router.cpp  packet_router.hpp
core/utils/: device_id.cpp  device_id.hpp  logger.cpp  logger.hpp  packet_monitor.cpp  packet_monitor.hpp
daemon/: main.cpp
docs/: ARCHITECTURE.md
interface/: api_server.cpp  api_server.hpp
platform/linux/discovery/: discovery_service.cpp
protocol_docs/: PROTOCOL.md
services/: message_service.cpp  message_service.hpp
